--- a/osn3/index.html
+++ b/osn3/index.html
@@ -3,7 +3,7 @@
         <title>It works!</title>
     </head>
     <body>
-        <div id="root">
+        <div id="app-root">
             Loading React app...
         </div>
     </body>
