--- a/osn3/index.html
+++ b/osn3/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>It works!</title>
+        <base href="/" />
     </head>
     <body>
         <div id="app-root">
