--- a/osn3/index.html
+++ b/osn3/index.html
@@ -1,7 +1,11 @@
 <html>
     <head>
+        <meta charset="utf-8">
         <title>It works!</title>
         <base href="/" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Open Source Nerd - Personal Web Portal">
+        <meta name="author" content="Filip Sufitchi">
     </head>
     <body>
         <div id="app-root">
