Serve static assets properly

--- a/osn3/index.html
+++ b/osn3/index.html
@@ -1,13 +1,13 @@
 <html>
     <head>
-        <title>~fsufitch/</title>
+        <title>fsufitch @ web</title>
         <base href="/" />
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="Open Source Nerd - Personal Web Portal">
         <meta name="author" content="Filip Sufitchi">
 
-        <link href="/assets/webicon.png" rel="shortcut icon" />
+        <link href="static/webicon.png" rel="shortcut icon" />
     </head>
     <body>
         <div id="app-root">
